--- a/css/style.css
+++ b/css/style.css
@@ -410,7 +410,8 @@
     flex: 1;
     display: flex;
     flex-direction: column;
-    padding: 1.6rem 0 0 0;
+    padding: 0 0 0 0;
+    margin: auto 0;
 }
 
 .main_itm .inner .left .itm_txt {
